# KceNotes

.github/workflows/: lcu-github-artifacts-release.yml
KceNotesApp/: db.sqlite3  index.html  pyproject.toml
KceNotesApp/kce/: admin.py  forms.py  models.py  urls.py  views.py
KceNotesApp/mysite/: settings.py  urls.py
KceNotesApp/static/: Thumbs.db
KceNotesApp/templates/: Examkida.html  about.html  base.html  contact.html  index.html  notes1.html  notes2.html  notes3.html  notes4.html  register.html
